fixed overflow mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@ body {
   .header {
       padding: 12px;
   }
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .App-header {
